[gd_scene load_steps=7 format=2]

[ext_resource path="res://StartScreen/LevelBox.gd" type="Script" id=1]
[ext_resource path="res://StartScreen/assets/fonts/BauhausBold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://StartScreen/assets/background.png" type="Texture" id=3]

[sub_resource type="DynamicFont" id=1]
size = 80
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 80
font_data = ExtResource( 2 )

[node name="LevelScreen" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 120
custom_constants/margin_top = 10
custom_constants/margin_left = 120
custom_constants/margin_bottom = 80

[node name="LevelBox" type="VBoxContainer" parent="."]
margin_left = 120.0
margin_top = 10.0
margin_right = 904.0
margin_bottom = 520.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1
script = ExtResource( 1 )

[node name="Levels" type="Label" parent="LevelBox"]
margin_top = 75.0
margin_right = 784.0
margin_bottom = 152.0
custom_fonts/font = SubResource( 1 )
text = "Levels:"
align = 1

[node name="Level1" type="MenuButton" parent="LevelBox"]
margin_top = 156.0
margin_right = 784.0
margin_bottom = 201.0
mouse_default_cursor_shape = 2
custom_fonts/font = SubResource( 2 )
text = "Level 1"

[node name="Level2" type="MenuButton" parent="LevelBox"]
margin_top = 205.0
margin_right = 784.0
margin_bottom = 250.0
mouse_default_cursor_shape = 2
custom_fonts/font = SubResource( 2 )
text = "Level 2"

[node name="Level3" type="MenuButton" parent="LevelBox"]
margin_top = 254.0
margin_right = 784.0
margin_bottom = 299.0
mouse_default_cursor_shape = 2
custom_fonts/font = SubResource( 2 )
text = "Level 3"

[node name="Level4" type="MenuButton" parent="LevelBox"]
margin_top = 303.0
margin_right = 784.0
margin_bottom = 348.0
mouse_default_cursor_shape = 2
custom_fonts/font = SubResource( 2 )
text = "Level 4"

[node name="ReturnButton" type="MenuButton" parent="LevelBox"]
margin_top = 352.0
margin_right = 784.0
margin_bottom = 435.0
mouse_default_cursor_shape = 2
custom_fonts/font = SubResource( 3 )
text = "Return to Menu"

[node name="Sprite" type="Sprite" parent="."]
show_behind_parent = true
position = Vector2( 515, 305 )
scale = Vector2( 0.257436, 0.234075 )
texture = ExtResource( 3 )
[connection signal="pressed" from="LevelBox/Level1" to="LevelBox" method="_on_Level1_pressed"]
[connection signal="pressed" from="LevelBox/Level2" to="LevelBox" method="_on_Level2_pressed"]
[connection signal="pressed" from="LevelBox/Level3" to="LevelBox" method="_on_Level3_pressed"]
[connection signal="pressed" from="LevelBox/Level4" to="LevelBox" method="_on_Level4_pressed"]
[connection signal="pressed" from="LevelBox/ReturnButton" to="LevelBox" method="_on_ReturnButton_pressed"]
